<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shot Timer (IKZ)</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="about_developer">© Vladislav Kozhushko\n\nIU6&#8211;83</string>
    <string name="about_app">This application developed in the framework of bachelor qualification work\n</string>
    <string name="sound_recording">Sound recording</string>
    <string name="todo">TODO</string>
    <string name="levelfiltr">Level Filtration</string>

    <!-- Summary -->

    <string name="sample_summary">Sample rate (Hz)</string>
    <string name="method_summary">Used method for shots recognizing</string>
    <string name="micvalsens_summary">Minimal value of microphone sensitivity</string>

    <!-- Default -->
    <string name="def_time_val">00:00.00</string>
    <string name="def_number">10</string>
    <string name="def_shottime">1.02</string>
    <string name="def_time">11.53</string>

    <!-- Text_ -->
    <string name="text_add">Add</string>
    <string name="text_save">Save</string>
    <string name="text_sec">sec</string>
    <string name="text_msec">ms</string>
    <string name="text_Menu">Menu</string>
    <string name="text_count_limit">The exercise has limit for count of shots</string>
    <string name="text_time_limit">The exercise has time limit for shoting</string>
    <string name="text_ok">OK</string>
    <string name="text_title_error">Title must have one or more symbols</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_shotsCount">Shots count</string>
    <string name="text_countLimit">Count Limit</string>
    <string name="text_info">Info</string>
    <string name="text_start">START</string>
    <string name="text_stop">STOP</string>
    <string name="text_reset">RESET</string>
    <string name="text_time">Time</string>
    <string name="text_number">#</string>
    <string name="text_split">Split</string>
    <string name="text_name">Name</string>
    <string name="text_title">Title</string>
    <string name="text_edit">Edit</string>
    <string name="text_delete">Delete</string>
    <string name="text_description">Description</string>
    <string name="text_timelimit">Time Limit</string>
    <string name="text_exercises">Exercises</string>
    <string name="text_no">no</string>
    <string name="text_yes">yes</string>
    <string name="text_success">You have completed this exercise successfully!</string>
    <string name="text_fail">You have failed this exercise!</string>
     <string name="text_status">Status</string>

    <!-- Title -->
    <string name="title_settings_sound">Recording</string>
    <string name="title_sample">Sample</string>
    <string name="title_activity_navigation">Shot Timer</string>
    <string name="title_section1">Main</string>
    <string name="title_section2">Exercises</string>
    <string name="title_section3">Settings</string>
    <string name="title_section4">About App</string>
    <string name="title_section5">Exit</string>
    <string name="title_activity_edit_ex">Edit Exercise</string>
    <string name="title_useMS">Microphone sensitive</string>
    <string name="title_main">Main</string>
    <string name="title_Method">Method</string>
    <string name="title_method">Recognize method</string>

    <!-- Preference keys -->
    <string name="key_sample">key_sample</string>
    <string name="key_RM">key_RM</string>
    <string name="key_useMicSensVal">key_MicSens</string>
    <string name="key_MicSensVal">key_MicSensVal</string>
    <string name="key_method">key_Method</string>

    <!-- Arrays -->
    <string-array name="Ex">
        <item>Бесконечный</item>
        <item>Первый выстрел</item>
        <item>Интервал</item>
    </string-array>
    <string-array name="SampleEntries">
        <item>44100</item>
        <item>22050</item>
        <item>16000</item>
    </string-array>
    <string-array name="Method">
        <item>Level Filtration</item>
        <item>Kohonen NNW</item>
    </string-array>
    <string-array name="MethodValues">
        <item>0</item>
        <item>1</item>
    </string-array>

</resources>