<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:seek="http://schemas.android.com/apk/res/ru.vladislavkozhushko.shottimer"
    android:title="@string/abc_action_bar_home_description" >

    <PreferenceCategory android:title="@string/title_settings_sound" >
        <ListPreference
            android:defaultValue="22050"
            android:dialogTitle="@string/title_sample"
            android:entries="@array/SampleEntries"
            android:entryValues="@array/SampleEntries"
            android:key="@string/key_sample"
            android:summary="@string/sample_summary"
            android:title="@string/title_sample" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:dialogTitle="@string/title_useMS"
            android:enabled="true"
            android:key="@string/key_useMicSensVal"
            android:title="@string/title_useMS" />

        <ru.vladislavkozhushko.shottimer.SeekBarPreference
            android:defaultValue="70"
            android:dependency="@string/key_useMicSensVal"
            android:dialogTitle="@string/title_useMS"
            android:key="@string/key_MicSensVal"
            android:persistent="true"
            android:summary="@string/micvalsens_summary"
            android:title="@string/title_useMS"
            seek:maxValue="105"
            seek:minValue="60" />
        <!-- ru.vladislavkozhushko.shottimer -->

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_main" >
        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/title_Method"
            android:entries="@array/Method"
            android:entryValues="@array/MethodValues"
            android:key="@string/key_method"
            android:summary="@string/method_summary"
            android:title="@string/title_Method" />
    </PreferenceCategory>

</PreferenceScreen>