<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="2dp"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/TextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:text="@string/def_number"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/TextShotTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="2"
        android:text="@string/def_shottime"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/TextTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="2"
        android:text="@string/def_time"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="35sp" />

</LinearLayout>